# meeting-transcription

./: .env.deployed  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  app.json  check_recall_recordings.py  check_scheduled_meetings.py  deploy.sh  env.example  firestore.indexes.json  list_meetings.py  main.py  pyproject.toml  requirements.txt  setup-production.sh  setup.sh  trigger_ended_meetings.py
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: ARCHITECTURE.md  BASE_PROMPTABLE_PLUGIN.md  DEPLOYMENT.md  DEVELOPMENT.md  GOOGLE_MEET_BYOC_SETUP.md  GOOGLE_MEET_TRANSCRIPT_SYNC.md  PLATFORM_INTEGRATIONS.md  PLUGIN_ARCHITECTURE.md  REQUIREMENTS.md  SCHEDULER_ARCHITECTURE.md  UI_SCHEDULER_CHANGES.md  autonomous-startup-generator-research.md  setup.html
plugins/: README.md
scripts/: check_recall_recordings.py  check_users.py  generate_api_key.py  list_meetings.py  setup-scheduler.sh  test_modular_pipeline.py  trigger_ended_meetings.py
src/api/: auth.py  auth_db.py  recall.py  scheduled_meetings.py  storage.py
src/meeting_transcription/: __init__.py
src/meeting_transcription/api/: auth.py  auth_db.py  recall.py  scheduled_meetings.py  scheduler.py  storage.py  timezone_utils.py
src/meeting_transcription/google_meet/: __init__.py  config.py  meet_client.py  oauth.py  pubsub.py  routes.py  session_handler.py  transcript_parser.py  webhook_handler.py  workspace_events.py
src/meeting_transcription/models/: meeting.py
src/meeting_transcription/pipeline/: combine_transcript_words.py  create_educational_chunks.py  create_study_guide.py  educational_prompts.py  markdown_to_pdf.py  parse_text_transcript.py  summarize_educational_content.py
src/meeting_transcription/pipeline/chunkers/: educational_chunker.py  whole_meeting_chunker.py
src/meeting_transcription/pipeline/core/: __init__.py  base_chunker.py  base_formatter.py  base_prompt_engine.py  base_promptable_plugin.py  pipeline_config.py
src/meeting_transcription/pipeline/factories/: pipeline_factory.py
src/meeting_transcription/pipeline/formatters/: __init__.py  study_guide_formatter.py
src/meeting_transcription/pipeline/prompts/: educational_prompts_engine.py
src/meeting_transcription/plugins/: __init__.py  educational_plugin.py  plugin_loader.py  plugin_registry.py  transcript_plugin_protocol.py
src/meeting_transcription/providers/: __init__.py  base.py  google_meet_provider.py  manual_provider.py  recall_provider.py  registry.py  zoom_provider.py
src/meeting_transcription/services/: meeting_service.py  scheduled_meeting_service.py  transcript_service.py  webhook_service.py
src/meeting_transcription/utils/: llm_client.py  url_validator.py
src/models/: __init__.py
src/pipeline/: combine_transcript_words.py  create_educational_chunks.py  create_study_guide.py  educational_prompts.py  markdown_to_pdf.py  parse_text_transcript.py  summarize_educational_content.py
src/pipeline/chunkers/: __init__.py
src/pipeline/core/: __init__.py  base_chunker.py  base_formatter.py  base_promptable_plugin.py  pipeline_config.py  types.py
src/pipeline/factories/: __init__.py
src/pipeline/formatters/: study_guide_formatter.py
src/pipeline/prompts/: __init__.py
src/plugins/: __init__.py  educational_plugin.py  plugin_loader.py  transcript_plugin_protocol.py
src/services/: meeting_service.py  scheduled_meeting_service.py  transcript_service.py  webhook_service.py
src/utils/: llm_client.py
static/: app.js  index.html
templates/: base.html  dashboard.html  meeting_detail.html  settings.html
templates/partials/: google_meet_status.html  meeting_list.html
tests/: __init__.py  conftest.py
tests/google_meet/: test_config.py  test_transcript_parser.py  test_webhook_handler.py
tests/pipeline/: test_parse_text_transcript.py
tests/plugins/: test_educational_plugin.py  test_plugin_registry.py  test_transcript_service_integration.py
tests/services/: __init__.py  test_meeting_service.py
tests/services/scheduled_meeting_service/: __init__.py  test_create.py  test_execute.py  test_list_get_delete.py
tests/services/transcript_service/: __init__.py  test_internals.py  test_recall.py  test_upload_queue.py  test_uploaded.py
tests/services/webhook_service/: __init__.py  test_bot_events.py  test_helpers.py  test_recording_events.py  test_transcript_events.py
tests/utils/: test_url_validator.py
