[tool.poetry]
name = "meeting-transcription"
version = "1.0.0"
description = "Meeting transcription service with AI-powered summarization"
authors = ["Kurt Niemi <kurtn@lll-solutions.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
flask = "^3.0.0"

# HTTP Client
requests = "^2.31.0"

# Environment Variables
python-dotenv = "^1.0.0"

# LLM Providers
openai = "^1.0.0"                    # For OpenAI and Azure OpenAI
anthropic = "^0.18.0"                # For Anthropic Claude
google-cloud-aiplatform = "^1.38.0"  # For Vertex AI (Gemini)

# PDF Generation
weasyprint = "^60.0"                 # HTML/CSS to PDF
markdown = "^3.5.0"                  # Markdown processing

# Google Cloud (for GCP deployment)
google-cloud-storage = "^2.14.0"
google-cloud-firestore = "^2.14.0"
google-cloud-secret-manager = "^2.18.0"

# Firebase Auth (for user authentication)
firebase-admin = "^6.2.0"

# Utilities
schedule = "^1.2.0"                  # For scheduled tasks
gunicorn = "^21.0.0"                 # Production WSGI server

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
