[tool.poetry]
name = "meeting-transcription"
version = "1.0.0"
description = "Meeting transcription service with AI-powered summarization"
authors = ["Kurt Niemi <kurtn@lll-solutions.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
flask = "^3.0.0"

# HTTP Client
requests = "^2.31.0"

# Environment Variables
python-dotenv = "^1.0.0"

# LLM Providers
openai = "^1.0.0"                    # For OpenAI and Azure OpenAI
anthropic = "^0.18.0"                # For Anthropic Claude
google-genai = "^0.3.0"              # For Vertex AI (Gemini) - new SDK

# PDF Generation
weasyprint = "^60.0"                 # HTML/CSS to PDF
markdown = "^3.5.0"                  # Markdown processing

# Google Cloud (for GCP deployment)
google-cloud-storage = "^2.14.0"
google-cloud-firestore = "^2.14.0"
google-cloud-secret-manager = "^2.18.0"
google-cloud-tasks = "^2.14.0"

# Firebase Auth (for user authentication)
firebase-admin = "^6.2.0"

# Utilities
schedule = "^1.2.0"                  # For scheduled tasks
gunicorn = "^21.0.0"                 # Production WSGI server
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
types-requests = "^2.31.0"
types-markdown = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (let formatter handle it)
]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "google.genai.*",
    "weasyprint.*",
    "schedule.*",
    "firebase_admin.*",
    "src.api.recall",
    "src.api.storage",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov=main",
    "--cov-report=term-missing",
    "--cov-report=html",
]
